--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"id": "3d-graph",
+	"id": "3d-graph-new",
 	"name": "3D Graph Plugin",
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"minAppVersion": "1.7.0",
 	"description": "A 3D Graph Plugin for Obsidian.",
 	"author": "Aryan Gupta",
