--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "3D Graph Plugin",
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"description": "A 3D Graph Plugin for Obsidian.",
 	"main": "main.js",
 	"scripts": {
@@ -13,6 +13,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
+		"@types/three": "^0.177.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -22,6 +23,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"3d-force-graph": "^1.77.0"
+		"3d-force-graph": "^1.77.0",
+		"three": "^0.177.0"
 	}
 }
