--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"id": "new-3d-graph",
-	"name": "3D Graph",
+	"name": "New 3D Graph",
 	"version": "2.0.0",
 	"minAppVersion": "1.5.0",
 	"description": "Visualize your Vault in 3D with a powerful, highly customizable, and filterable graph.",
