--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "3D Graph Plugin",
-	"version": "2.1.2",
-	"description": "A 3D Graph Plugin for Obsidian.",
+	"version": "2.1.3",
+	"description": "Visualize your Vault in 3D with a powerful, highly customizable, and filterable graph.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
