--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"3d-force-graph": "^1.77.0",
-		"three": "^0.177.0"
+		"three": "^0.177.0",
+		"three-spritetext": "^1.10.0"
 	}
 }
